# essay-pipeline

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  seed.yaml  validation_output.txt
.githooks/: pre-commit
.github/workflows/: ci.yml  daily-log.yml
docs/adr/: 001-initial-architecture.md  002-frontmatter-schema-design.md
src/: essay_drafter.py  indexer.py  link_checker.py  llm_client.py  log_generator.py  schema_loader.py  sprint_narrator.py  topic_suggester.py  validator.py
tests/: test_essay_drafter.py  test_indexer.py  test_link_checker.py  test_llm_client.py  test_log_generator.py  test_schema_loader.py  test_sprint_narrator.py  test_topic_suggester.py  test_validator.py
tests/fixtures/: bad-pattern.md  bad-tag-format.md  missing-field.md  short-excerpt.md  valid-essay.md  wrong-enum.md
